--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "livewire/livewire": "^1.1",
         "spatie/laravel-permission": "^3.11",
         "yajra/laravel-datatables": "^1.5"
     },
